feat: add 4-role system with dashboard shell and protected routes
Backend:
- Role enum: SUPER_ADMIN, ADMIN, TECHNICIAN, CUSTOMER
- User entity gains firstName, lastName, phone, role, active fields
- JWT now embeds role claim; AuthResponse returns role + fullName
- New entities: Meter, MeterReading, Alert with full JPA relationships
- Controllers: UserController, MeterController, MeterReadingController, AlertController
- Role-based @PreAuthorize on all new endpoints
- EnableMethodSecurity on SecurityConfig

Frontend:
- AuthContext: persists token/email/role/fullName across sessions
- ProtectedRoute: redirects unauthenticated to /auth, wrong role to /403
- DashboardShell: responsive sidebar with role-filtered navigation
- Role-specific overview pages: SuperAdmin, Admin, Technician, Customer
- Auth.tsx: uses AuthContext, adds firstName/lastName fields on register
- App.tsx: full role-based route tree under /dashboard

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>